maestro/namespace.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: maestro
  labels:
    name: maestro
