maestro/maestro-api-ingress.yaml
---

# Strip API prefix middleware
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: maestro
spec:
  stripPrefix:
    prefixes:
      - /api

---

# Maestro API ingress
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: maestro-api-ingress
  namespace: maestro
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`maestro.yukitsune.dev`) && PathPrefix(`/api`) # Wish this could be put into a ConfigMap 😔
      kind: Rule
      services:
        - name: maestro-api-service
          port: 80
      middlewares:
        - name: strip-api-prefix
